--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ html a:hover, button:hover {
 body {
     z-index: 0;
     min-height: 100vh;
+	min-height: 100dvh;
     padding-top: 4rem;
     padding-bottom: 4rem;  
     padding-left: clamp(1rem, 3vw, 1.5rem);
@@ -107,6 +108,7 @@ header {
     position: relative;
     align-items: flex-end;
     height: 100vh;
+	height: 100dvh;
     max-width: 38rem;
 }
 
