--- a/css/audio.css
+++ b/css/audio.css
@@ -16,19 +16,19 @@ div.essential_audio {
 
 /* 2. The Player Button – General */
 div.essential_audio > div:nth-child(1) div {
-	width: 24px;
-	height: 24px;
-	margin-top: -12px;
+	width: 28px;
+	height: 28px;
+	margin-top: -13px;
 	border-radius: 50%;
-	background-color: var(--accent-color);
+	background-color: var(--secondary-color);
 }
 
 div.essential_audio > div:nth-child(1) div:after {
 	position: absolute;
-	top: 10%;
-	left: 10%;
-	width: 80%;
-	height: 80%;
+	top: 7%;
+	left: 7%;
+	width: 86%;
+	height: 86%;
 }
 
 /* Set here how much the button exceeds the horizontal track limits: */
