--- a/css/contact.css
+++ b/css/contact.css
@@ -68,5 +68,5 @@ form p {
     font-weight: 400;
     font-style: normal; 
     text-align: center;
-    color: var(--overlay-accent);
+    color: var(--accent-color);
 }
